syntax = "proto3";

package db;

import "google/protobuf/timestamp.proto";

service DB {
  rpc Get(GetProfileRequest) returns (GetProfileResponse);
}

message GetProfileRequest {
  string instanceId = 1;
  string type       = 2;
  // timestamps of 0 are considered unset, and merge all profiles
  google.protobuf.Timestamp start = 3;
  google.protobuf.Timestamp end   = 4;
}

message GetProfileResponse {
  bytes data = 1;
}
